--- a/styles.css
+++ b/styles.css
@@ -85,10 +85,6 @@ html {
     background-color: #222; /* Darker grey for middle panel */
 }
 
-.dark-theme .right-panel {
-    background-color: #333; /* Dark grey for right panel */
-}
-
 .dark-theme a {
     color: #f0f0f0;
 }
@@ -104,23 +100,18 @@ main {
     min-height: 100vh;
 }
 
-.left-panel, .middle-panel, .right-panel {
+.left-panel, .middle-panel {
     padding: 10px;
 }
 
 .left-panel {
-    flex: 1;
+    flex: 0.75; /* Reduced size for left panel */
     background-color: #f0f0f0; /* Light grey for left panel in light mode */
 }
 
 .middle-panel {
-    flex: 2;
+    flex: 3.25; /* Increased size for middle panel */
     background-color: #fff; /* White background for middle panel in light mode */
-}
-
-.right-panel {
-    flex: 1;
-    background-color: #f0f0f0; /* Light grey for right panel in light mode */
 }
 
 /* Collapsible Styles */
@@ -137,7 +128,7 @@ main {
     transition: background-color 0.3s;
 }
 
-.dark-theme .collapsible , .dark-theme .content{
+.dark-theme .collapsible , .dark-theme .content {
     background-color: #555;
 }
 
